// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/CircularProgress Animation 1`] = `
<div>
  <div
    aria-busy="true"
    aria-label="Loading"
    data-css-1ie49mc=""
    role="progressbar"
  >
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
  <div
    style={
      Object {
        "color": "rgba(255, 255, 255, 0.95)",
      }
    }
  >
    Value: 
    0
  </div>
</div>
`;

exports[`Storyshots Components/CircularProgress Class Name Override 1`] = `
<div
  aria-busy="true"
  aria-label="Loading"
  className="someString"
  data-css-1ie49mc=""
  role="progressbar"
>
  <svg
    data-css-1txt1eh=""
    version="1.1"
    viewBox="0 0 48 48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="24"
      cy="24"
      data-css-rk8c6r=""
      r={22}
    />
    <circle
      cx="24"
      cy="24"
      data-css-17x5ehd=""
      r={22}
      strokeDasharray="138.23007675795088 138.23007675795088"
      strokeDashoffset={103.67255756846316}
    />
  </svg>
</div>
`;

exports[`Storyshots Components/CircularProgress Style Override 1`] = `
<div
  aria-busy="true"
  aria-label="Loading"
  data-css-1ie49mc=""
  role="progressbar"
  style={
    Object {
      "outline": "1px solid red",
    }
  }
>
  <svg
    data-css-1txt1eh=""
    version="1.1"
    viewBox="0 0 48 48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="24"
      cy="24"
      data-css-rk8c6r=""
      r={22}
    />
    <circle
      cx="24"
      cy="24"
      data-css-17x5ehd=""
      r={22}
      strokeDasharray="138.23007675795088 138.23007675795088"
      strokeDashoffset={103.67255756846316}
    />
  </svg>
</div>
`;

exports[`Storyshots Components/CircularProgress Values And Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr 1fr",
      "justifyItems": "left",
    }
  }
>
  <div>
    0
  </div>
  <div
    aria-busy="true"
    aria-label="Loading"
    data-css-1abx40i=""
    role="progressbar"
  >
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="Loading"
    data-css-1ie49mc=""
    role="progressbar"
  >
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
  <div>
    25
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={25}
    data-css-1abx40i=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      25%
    </div>
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={25}
    data-css-1ie49mc=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      25%
    </div>
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
  <div>
    33
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    data-css-1abx40i=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      33%
    </div>
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={92.6141514278271}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={33}
    data-css-1ie49mc=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      33%
    </div>
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={92.6141514278271}
      />
    </svg>
  </div>
  <div>
    50
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    data-css-1abx40i=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      50%
    </div>
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={69.11503837897544}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={50}
    data-css-1ie49mc=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      50%
    </div>
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={69.11503837897544}
      />
    </svg>
  </div>
  <div>
    66
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={66}
    data-css-1abx40i=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      66%
    </div>
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={46.9982260977033}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={66}
    data-css-1ie49mc=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      66%
    </div>
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={46.9982260977033}
      />
    </svg>
  </div>
  <div>
    75
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={75}
    data-css-1abx40i=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      75%
    </div>
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={34.55751918948772}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={75}
    data-css-1ie49mc=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      75%
    </div>
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={34.55751918948772}
      />
    </svg>
  </div>
  <div>
    100
  </div>
  <div
    aria-busy="false"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    data-css-1abx40i=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      complete
    </div>
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={0}
      />
    </svg>
  </div>
  <div
    aria-busy="false"
    aria-label="course loading"
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    data-css-1ie49mc=""
    role="progressbar"
  >
    <div
      aria-live="polite"
      data-css-6wu9td=""
    >
      complete
    </div>
    <svg
      data-css-r8je9y=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={0}
      />
    </svg>
  </div>
  <div>
    Indeterminate
  </div>
  <div
    aria-busy="true"
    aria-label="Loading"
    data-css-1abx40i=""
    role="progressbar"
  >
    <svg
      data-css-1txt1eh=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
  <div
    aria-busy="true"
    aria-label="Loading"
    data-css-1ie49mc=""
    role="progressbar"
  >
    <svg
      data-css-1txt1eh=""
      version="1.1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="24"
        cy="24"
        data-css-rk8c6r=""
        r={22}
      />
      <circle
        cx="24"
        cy="24"
        data-css-17x5ehd=""
        r={22}
        strokeDasharray="138.23007675795088 138.23007675795088"
        strokeDashoffset={103.67255756846316}
      />
    </svg>
  </div>
</div>
`;
